compiler/testData/diagnostics/tests/inference/kt12399.fir.kt
fun foo(a: Any) {
    foo({ <!VALUE_PARAMETER_WITH_NO_TYPE_ANNOTATION!>index<!> -> } {  })
}